# ClassifyApp

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/ass3q2/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/q3_a3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ass3q2/: MainActivity.kt
app/src/main/java/com/example/q3_a3/: MainActivity.kt
app/src/main/jni/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ass3q2/: ExampleUnitTest.kt
app/src/test/java/com/example/q3_a3/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
